:arrow_up: upgrade the project from sb 2.6.4 to sb 3.3.6 using openrewrite